--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Vehicle Fix Assistant</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React App - Single File Setup</title>
-
-    <!-- React and ReactDOM from CDN -->
+    <!-- React & ReactDOM from CDN -->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-
-    <!-- Babel for JSX transformation -->
+    <!-- Babel for JSX -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <style>
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: #f9fafb;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
-
+    
     <!-- Load App.jsx -->
-    <script type="text/babel" src="App.jsx"></script>
-
-    <!-- Render -->
+    <script type="text/babel" src="./App.jsx"></script>
     <script type="text/babel">
       const root = ReactDOM.createRoot(document.getElementById("root"));
       root.render(<App />);
